Page MenuHome GnuPG

Kleopatra: Remove info buttons from Certify dialog
Closed, ResolvedPublic

Description

This is a spin-off of T6149: Kleopatra: Fix (accessibility) issues found while testing with NVDA.

While testing with NVDA (on Windows) I noticed multiple problems with the tool tips that are shown when one of the info buttons in the Certify dialog is pressed:

  • In the Certify dialog the explicitly shown tool tips are not read.
  • In the Certify dialog the explicitly shown tool tips are immediately closed if the mouse pointer is over them or if the mouse is moved a short distance.

There is no easy solution for this due to the way Qt and/or Windows UI Automation handle tool tips. If info buttons
would be used in more dialogs, then it might make sense to implement a custom solution. But they are only used
in the Certify dialog. (The Delete Certificates dialog is the only other location where a manually triggered tool tip is used which is triggered by a link in a text label.)

I propose to remove the info buttons from the Certify dialog. The texts of the tool tips could be added (maybe a bit more concise) as normal tool tips to the corresponding UI elements.

Alternatively, clicking the info buttons could open the manual (or some other document like a quick guide) at a location explaining the value the info button belongs to. But this alternative still has the problem that it's an extrawurst of the Certify Dialog.

Event Timeline

aheinecke added a project: Restricted Project.

o.O have overlooked this since October.

It would be fine with me to remove the info buttons and use tooltips instead if this is better for Accessibility.

I created the Info buttons because I got feedback that it is not intutive to look for a tooltip to explain something. So the Info button just was added to make it more visible that there is additional information. I planned to add this more and more in Kleopatra instead of tooltips but never did. So its probably better to remove them then to have another UI element that is not used anywhere else.

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.

Nothing to test (except that the tool tips are now shown for the widgets).

ikloecker mentioned this in Unknown Object (Maniphest Task).Jul 28 2025, 3:14 PM
ikloecker added a parent task: Unknown Object (Maniphest Task).
ikloecker mentioned this in Unknown Object (Maniphest Task).Jul 28 2025, 4:31 PM