Remove info buttons from Certify dialog

GnuPG-bug-id: 6262